# ArinCapture3D

./: .gitignore  CMakeLists.txt  README.md  build.bat  package.ps1
.github/workflows/: build-windows.yml  release.yml
res/: resource.cpp  resource.h  resource.rc
src/: 3PassShader.cpp  3PassShader.h  CaptureDXGI.cpp  CaptureDXGI.h  CaptureWGC.cpp  CaptureWGC.h  DepthDialog.cpp  DepthDialog.h  DxgiCrop.cpp  DxgiCrop.h  Log.cpp  Log.h  Monitors.cpp  Monitors.h  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  TrayIcon.cpp  TrayIcon.h  WindowTargeting.cpp  WindowTargeting.h  main.cpp
